2005-03-01  Davyd Madeley  <davyd@madeley.id.au>

	* figures/*: remove old figures
	
	* figures/figure-backgrounds.png:
	* figures/figure-nautilus.png:
	* figures/figure-epiphany.png:
	* figures/figure-soundjuicer.png:
	* figures/figure-evolution-weather.png:
	* figures/figure-totem.png: Some figures. 5px dropshadow offset.
	
	* rnapplications.xml:
	* rndesktop.xml: Update for figures.

2005-03-01  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml: Removed the TODOs, fixed stuff, after email from 
	Alexander Larsson.
	* releasenotes.xml: Added link to RoadMap, because Luis will have 
	this finished for 2.10.
	* rnstandards.xml: Mentioned menus and desktop entries specs.

2005-03-01  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Removed the TODO about the sound volume. Apparently 
	it is correct.
	* rnepiphany.xml: Removed the TODO about the improved fullscreen 
	mode. Still have no idea how it is improved, but I will let this one 
	go.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* releasenotes.xml: Revive the known issues section and start it with 
	the mozilla focus problem.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* rnutilities: Remove gnome-search section because the mentioned 
	feature does not exist - it is just a bug fix that, if explained, 
	would just highlight that file searching is not that great in GNOME.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* Makfile.am: Add rnutilities to the target dependency.
	* rnutilities: Add more gedit changes described y PaoloMaggi in the 
	wiki.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Rewrote removed applets section.
	* Some other small fixes suggested by Frank Arnold.

2005-02-23  Danilo Šegan  <dsegan@gmx.net>

	* po/*: Added simple translation infrastructure.

2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* releasenotes.xml: Use live.gnome.org/JoinGnome instead of the 
	other pages, as suggested by Elijah, because this one is more up 